--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,3 +1,11 @@
+import Wave from '../components/wave';
+
 # Contact Me
 
 You can get in contact with me through email
+
+## Or you can wave to me
+
+Just click the button!
+
+<Wave />
